# rpScripts

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  RELEASE.md  bibtex.bib  lattice_map.json  pyproject.toml  requirements.txt  rps_bin.py  rps_compile.spec  rps_run.py  rpscripts.spec
docs/: requirements.txt
docs/source/: authors.rst  bibliography.rst  changelog.rst  conf.py  index.rst  installation.rst  modules.rst  rpscripts.lib.rst  rpscripts.rst  usage.rst
docs/source/programs/: annotator.rst  calculator.rst  converter.rst  finder.rst  index.rst  info.rst  labeler.rst  plotter.rst  stats.rst  tclass.rst  tcontour.rst  trimmer.rst  utils.rst
examples/: README.md  schumann-opus48no2-annotated-partitions.mxl  schumann-opus48no2-labelled.csv  schumann-opus48no2.csv  schumann-opus48no2.json  schumann-opus48no2.txt
rpscripts/: __init__.py  _version.py  annotator.py  calculator.py  cli.py  config.py  converter.py  finder.py  info.py  labeler.py  plotter.py  stats.py  tclass.py  tcontour.py  trimmer.py  utils.py
rpscripts/lib/: base.py  partition.py
src/: README.md  __init__.py  rpa.py  rpc.py  rpl.py  rpp.py
tests/: test_rpc.py
