[tool.poetry]
name = "rpscripts"
version = "2.3.dev1"
description = "A calculator of the rhythmic partitioning of musical texture"
authors = ["Marcos Sampaio"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "rpscripts" },
]

[tool.poetry.scripts]
rpscripts = "rpscripts.cli:main"

[tool.poetry.dependencies]
python = ">= 3.12"
matplotlib = ">= 3.9"
music21 = "8.1.0"
numpy = ">= 2.1"
pandas = ">= 2.2"
statsmodels = ">= 0.14"
graphviz = ">= 0.20.0"
tqdm = ">= 4.67.0"
networkx = ">= 3.4.0"
seaborn = ">= 0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"